welcome.lessons.welcome.array.has271.Has271.scala.error
has271:13: error: illegal start of simple expression
		if (nums(i+2)==nums(i)-2)) {
                                         ^